--- a/index.html
+++ b/index.html
@@ -1,93 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Agende seu horário</title>
+  <title>Agendamento Barbearia</title>
   <style>
-    body { font-family: Arial; padding: 20px; background: #f5f5f5; }
-    form { max-width: 400px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    h2 { text-align: center; }
-    input, select, button { width: 100%; padding: 10px; margin: 10px 0; border-radius: 6px; border: 1px solid #ccc; }
-    button { background: #25D366; color: white; font-size: 16px; border: none; }
-    button:hover { background: #1ebd5d; }
+    body { font-family: sans-serif; padding: 20px; background: #f4f4f4; }
+    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 400px; margin: auto; }
+    input, select, button {
+      width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc;
+    }
+    button { background: #28a745; color: white; border: none; cursor: pointer; }
   </style>
 </head>
 <body>
+  <form id="agendamentoForm">
+    <h2>Agende seu horário</h2>
+    <input type="text" id="nome" placeholder="Seu nome" required>
+    <input type="date" id="data" required>
+    <select id="hora" required>
+      <option value="">Selecione o horário</option>
+    </select>
+    <button type="submit">Agendar via WhatsApp</button>
+  </form>
 
-<h2>Agendamento - Barbearia</h2>
+  <script>
+    const planilhaURL = 'https://opensheet.elk.sh/1JtyvpySdzWgTMTeP2n5hdvTkLH6jNBuNzrtkNxa0WYc/1';
+    const horariosFixos = [
+      '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
+      '13:00', '13:30', '14:00', '14:30', '15:00', '15:30',
+      '16:00', '16:30', '17:00', '17:30', '18:00', '18:30',
+      '19:00', '19:30', '20:00'
+    ];
 
-<form id="form">
-  <input type="text" id="nome" placeholder="Seu nome" required>
-  <input type="date" id="data" required>
-  <select id="hora" required>
-    <option value="">Selecione o horário</option>
-  </select>
-  <button type="submit">Agendar via WhatsApp</button>
-</form>
+    async function carregarHorarios() {
+      const dataSelecionada = document.getElementById("data").value;
+      const response = await fetch(planilhaURL);
+      const agendados = await response.json();
 
-<script>
-const scriptURL = "https://script.google.com/macros/s/AKfycbwldduWiMsIEYZPY_-vjFUMz8bGoza3sstlY8yJLoVwX5EQMKcBkfDYgquhVARl7Aq0/exec";
+      const horariosOcupados = agendados
+        .filter(e => e.Data === dataSelecionada)
+        .map(e => e.Hora);
 
-const horariosDisponiveis = [
-  "09:00", "09:30", "10:00", "10:30", "11:00", "11:30",
-  "13:00", "13:30", "14:00", "14:30", "15:00", "15:30",
-  "16:00", "16:30", "17:00", "17:30", "18:00", "18:30",
-  "19:00", "19:30", "20:00"
-];
-
-document.getElementById("data").addEventListener("change", function() {
-  const data = this.value;
-  fetch(scriptURL)
-    .then(response => response.text())
-    .then(() => {
-      fetch(`${scriptURL}?t=${Date.now()}`)
-        .then(() => {
-          fetch(`https://opensheet.elk.sh/${scriptURL.split("/")[5]}/1`)
-            .then(res => res.json())
-            .then(dataSheet => {
-              const ocupados = dataSheet.filter(l => l.Data === data).map(l => l.Hora);
-              const select = document.getElementById("hora");
-              select.innerHTML = '<option value="">Selecione o horário</option>';
-              horariosDisponiveis.forEach(h => {
-                const op = document.createElement("option");
-                op.value = h;
-                op.text = ocupados.includes(h) ? `${h} (indisponível)` : h;
-                if (ocupados.includes(h)) op.disabled = true;
-                select.appendChild(op);
-              });
-            });
-        });
-    });
-});
-
-document.getElementById("form").addEventListener("submit", function(e) {
-  e.preventDefault();
-  const nome = document.getElementById("nome").value;
-  const data = document.getElementById("data").value;
-  const hora = document.getElementById("hora").value;
-
-  if (!nome || !data || !hora) return alert("Preencha todos os campos.");
-
-  const formData = new FormData();
-  formData.append("nome", nome);
-  formData.append("data", data);
-  formData.append("hora", hora);
-
-  fetch(scriptURL, {
-    method: "POST",
-    body: formData
-  })
-  .then(response => response.text())
-  .then(result => {
-    if (result.includes("Sucesso")) {
-      const mensagem = `Olá! Quero agendar:%0ANome: ${nome}%0AData: ${data}%0AHorário: ${hora}`;
-      window.open(`https://wa.me/5548988750451?text=${mensagem}`, "_blank");
-    } else {
-      alert("Horário já agendado! Escolha outro.");
+      const select = document.getElementById("hora");
+      select.innerHTML = '<option value="">Selecione o horário</option>';
+      horariosFixos.forEach(horario => {
+        if (!horariosOcupados.includes(horario)) {
+          const opt = document.createElement("option");
+          opt.value = horario;
+          opt.textContent = horario;
+          select.appendChild(opt);
+        }
+      });
     }
-  });
-});
-</script>
 
+    document.getElementById("data").addEventListener("change", carregarHorarios);
+
+    document.getElementById("agendamentoForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const nome = document.getElementById("nome").value;
+      const data = document.getElementById("data").value;
+      const hora = document.getElementById("hora").value;
+
+      const mensagem = `Olá! Quero agendar um horário:\n\nNome: ${nome}\nData: ${data}\nHora: ${hora}`;
+      const whatsappURL = `https://wa.me/5548988750451?text=${encodeURIComponent(mensagem)}`;
+      window.open(whatsappURL, "_blank");
+    });
+  </script>
 </body>
 </html>
