--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Agendamento Barbearia</title>
   <style>
     body { font-family: sans-serif; padding: 20px; background: #f4f4f4; }
@@ -15,8 +15,8 @@
 <body>
   <form id="agendamentoForm">
     <h2>Agende seu horário</h2>
-    <input type="text" id="nome" placeholder="Seu nome" required>
-    <input type="date" id="data" required>
+    <input type="text" id="nome" placeholder="Seu nome" required />
+    <input type="date" id="data" required />
     <select id="hora" required>
       <option value="">Selecione o horário</option>
     </select>
@@ -25,6 +25,7 @@
 
   <script>
     const planilhaURL = 'https://opensheet.elk.sh/1JtyvpySdzWgTMTeP2n5hdvTkLH6jNBuNzrtkNxa0WYc/1';
+    const scriptURL = 'https://script.google.com/macros/library/d/13VcUt5SQHNyo9IBNSdn2cfqkoo4Cg813V7YYuZFUYKqcqwiXAcQ29irJ/1';
     const horariosFixos = [
       '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
       '13:00', '13:30', '14:00', '14:30', '15:00', '15:30',
@@ -33,7 +34,9 @@
     ];
 
     async function carregarHorarios() {
-      const dataSelecionada = document.getElementById("data").value;
+      const dataSelecionada = document.getElementById('data').value;
+      if (!dataSelecionada) return;
+
       const response = await fetch(planilhaURL);
       const agendados = await response.json();
 
@@ -41,11 +44,11 @@
         .filter(e => e.Data === dataSelecionada)
         .map(e => e.Hora);
 
-      const select = document.getElementById("hora");
+      const select = document.getElementById('hora');
       select.innerHTML = '<option value="">Selecione o horário</option>';
       horariosFixos.forEach(horario => {
         if (!horariosOcupados.includes(horario)) {
-          const opt = document.createElement("option");
+          const opt = document.createElement('option');
           opt.value = horario;
           opt.textContent = horario;
           select.appendChild(opt);
@@ -53,17 +56,41 @@
       });
     }
 
-    document.getElementById("data").addEventListener("change", carregarHorarios);
+    document.getElementById('data').addEventListener('change', carregarHorarios);
 
-    document.getElementById("agendamentoForm").addEventListener("submit", function(e) {
+    document.getElementById('agendamentoForm').addEventListener('submit', async function(e) {
       e.preventDefault();
-      const nome = document.getElementById("nome").value;
-      const data = document.getElementById("data").value;
-      const hora = document.getElementById("hora").value;
 
-      const mensagem = `Olá! Quero agendar um horário:\n\nNome: ${nome}\nData: ${data}\nHora: ${hora}`;
-      const whatsappURL = `https://wa.me/5548988750451?text=${encodeURIComponent(mensagem)}`;
-      window.open(whatsappURL, "_blank");
+      const nome = document.getElementById('nome').value.trim();
+      const data = document.getElementById('data').value;
+      const hora = document.getElementById('hora').value;
+
+      if (!nome || !data || !hora) {
+        alert('Por favor, preencha todos os campos.');
+        return;
+      }
+
+      // Envia dados para o Google Apps Script
+      try {
+        const res = await fetch(scriptURL, {
+          method: 'POST',
+          body: JSON.stringify({ nome, data, hora }),
+          headers: { 'Content-Type': 'application/json' }
+        });
+        const json = await res.json();
+
+        if (json.status === 'success') {
+          // Monta a mensagem para WhatsApp
+          const mensagem = `Olá! Quero agendar um horário:\n\nNome: ${nome}\nData: ${data}\nHora: ${hora}`;
+          const whatsappURL = `https://wa.me/5548988750451?text=${encodeURIComponent(mensagem)}`;
+          window.open(whatsappURL, '_blank');
+        } else {
+          alert('Erro ao salvar o agendamento. Tente novamente.');
+        }
+      } catch (error) {
+        alert('Erro na conexão. Tente novamente mais tarde.');
+        console.error(error);
+      }
     });
   </script>
 </body>
