--- a/index.html
+++ b/index.html
@@ -1,97 +1,230 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Agendamento Barbearia</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; background: #f4f4f4; }
-    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 400px; margin: auto; }
-    input, select, button {
-      width: 100%; padding: 10px; margin: 10px 0; border-radius: 5px; border: 1px solid #ccc;
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Agendamento Barbearia</title>
+<style>
+  * {
+    box-sizing: border-box;
+  }
+
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #2c3e50;
+    overflow: hidden;
+  }
+
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  #stickers-container {
+    position: fixed;
+    top: 0; left: 0; right: 0; bottom: 0;
+    pointer-events: none;
+    user-select: none;
+    z-index: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 80px);
+    grid-auto-rows: 80px;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  #stickers-container img {
+    width: 80px;
+    height: 80px;
+    opacity: 0.1;
+    transform-origin: center center;
+  }
+
+  form {
+    position: relative;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.97);
+    padding: 32px 40px;
+    border-radius: 16px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    max-width: 420px;
+    width: 100%;
+    backdrop-filter: blur(8px);
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 24px;
+    font-size: 1.6rem;
+    color: #2c3e50;
+  }
+
+  input[type="text"],
+  input[type="date"],
+  select {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 18px;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    font-size: 1rem;
+    transition: border-color 0.3s ease;
+  }
+
+  input:focus,
+  select:focus {
+    border-color: #3498db;
+    outline: none;
+  }
+
+  button {
+    width: 100%;
+    padding: 14px;
+    background: #3498db;
+    border: none;
+    border-radius: 12px;
+    color: white;
+    font-size: 1.1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+
+  button:hover {
+    background: #2980b9;
+  }
+
+  @media (max-width: 500px) {
+    form {
+      padding: 24px;
     }
-    button { background: #28a745; color: white; border: none; cursor: pointer; }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <form id="agendamentoForm">
-    <h2>Agende seu horário</h2>
-    <input type="text" id="nome" placeholder="Seu nome" required />
-    <input type="date" id="data" required />
-    <select id="hora" required>
-      <option value="">Selecione o horário</option>
-    </select>
-    <button type="submit">Agendar via WhatsApp</button>
-  </form>
 
-  <script>
-    const planilhaURL = 'https://opensheet.elk.sh/1JtyvpySdzWgTMTeP2n5hdvTkLH6jNBuNzrtkNxa0WYc/1';
-    const scriptURL = 'https://script.google.com/macros/library/d/13VcUt5SQHNyo9IBNSdn2cfqkoo4Cg813V7YYuZFUYKqcqwiXAcQ29irJ/1';
-    const horariosFixos = [
-      '09:00', '09:30', '10:00', '10:30', '11:00', '11:30',
-      '13:00', '13:30', '14:00', '14:30', '15:00', '15:30',
-      '16:00', '16:30', '17:00', '17:30', '18:00', '18:30',
-      '19:00', '19:30', '20:00'
-    ];
+<div id="stickers-container"></div>
 
-    async function carregarHorarios() {
-      const dataSelecionada = document.getElementById('data').value;
-      if (!dataSelecionada) return;
+<form id="form">
+  <h2>Agende seu horário</h2>
+  <input type="text" id="nome" placeholder="Seu nome" required />
 
-      const response = await fetch(planilhaURL);
-      const agendados = await response.json();
+  <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 18px;">
+    <label for="data" style="white-space: nowrap;">Escolha a data</label>
+    <input type="date" id="data" required style="margin-bottom: 0;" />
+  </div>
 
-      const horariosOcupados = agendados
-        .filter(e => e.Data === dataSelecionada)
-        .map(e => e.Hora);
+  <select id="hora" required>
+    <option value="">Selecione o horário</option>
+  </select>
+  <button type="submit">Agendar</button>
+</form>
 
-      const select = document.getElementById('hora');
-      select.innerHTML = '<option value="">Selecione o horário</option>';
-      horariosFixos.forEach(horario => {
-        if (!horariosOcupados.includes(horario)) {
-          const opt = document.createElement('option');
-          opt.value = horario;
-          opt.textContent = horario;
-          select.appendChild(opt);
-        }
-      });
+<script>
+  const stickerUrls = [
+    'https://cdn-icons-png.flaticon.com/512/9367/9367428.png',
+    'https://cdn-icons-png.flaticon.com/512/9367/9367430.png',
+    'https://cdn-icons-png.flaticon.com/512/9367/9367452.png',
+    'https://cdn-icons-png.flaticon.com/512/9367/9367456.png'
+  ];
+
+  function randomBetween(min, max) {
+    return Math.random() * (max - min) + min;
+  }
+
+  const container = document.getElementById('stickers-container');
+
+  function preencherFigurinhas() {
+    container.innerHTML = '';
+
+    const cols = Math.ceil(window.innerWidth / 80);
+    const rows = Math.ceil(window.innerHeight / 80);
+
+    container.style.gridTemplateColumns = `repeat(${cols}, 80px)`;
+    container.style.gridAutoRows = `80px`;
+
+    for(let i = 0; i < cols * rows; i++) {
+      const img = document.createElement('img');
+      img.src = stickerUrls[Math.floor(Math.random() * stickerUrls.length)];
+      const rot = randomBetween(-30, 30);
+      img.style.transform = `rotate(${rot}deg)`;
+      img.style.opacity = (0.08 + Math.random() * 0.07).toFixed(2);
+      container.appendChild(img);
     }
+  }
 
-    document.getElementById('data').addEventListener('change', carregarHorarios);
+  preencherFigurinhas();
+  window.addEventListener('resize', preencherFigurinhas);
 
-    document.getElementById('agendamentoForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwldduWiMsIEYZPY_-vjFUMz8bGoza3sstlY8yJLoVwX5EQMKcBkfDYgquhVARl7Aq0/exec';
+  const horariosFixos = [
+    '09:00','09:30','10:00','10:30','11:00','11:30',
+    '13:00','13:30','14:00','14:30','15:00','15:30',
+    '16:00','16:30','17:00','17:30','18:00','18:30',
+    '19:00','19:30','20:00'
+  ];
 
-      const nome = document.getElementById('nome').value.trim();
-      const data = document.getElementById('data').value;
-      const hora = document.getElementById('hora').value;
+  function formatarDataBR(data) {
+    const [ano, mes, dia] = data.split("-");
+    return `${dia}/${mes}/${ano}`;
+  }
 
-      if (!nome || !data || !hora) {
-        alert('Por favor, preencha todos os campos.');
-        return;
-      }
+  document.getElementById('data').addEventListener('change', async function() {
+    const dataSelecionada = formatarDataBR(this.value);
+    const response = await fetch('https://opensheet.elk.sh/1JtyvpySdzWgTMTeP2n5hdvTkLH6jNBuNzrtkNxa0WYc/1');
+    const agendados = await response.json();
+    const horariosOcupados = agendados.filter(e => e.Data === dataSelecionada).map(e => e.Hora);
 
-      // Envia dados para o Google Apps Script
-      try {
-        const res = await fetch(scriptURL, {
-          method: 'POST',
-          body: JSON.stringify({ nome, data, hora }),
-          headers: { 'Content-Type': 'application/json' }
-        });
-        const json = await res.json();
-
-        if (json.status === 'success') {
-          // Monta a mensagem para WhatsApp
-          const mensagem = `Olá! Quero agendar um horário:\n\nNome: ${nome}\nData: ${data}\nHora: ${hora}`;
-          const whatsappURL = `https://wa.me/5548988750451?text=${encodeURIComponent(mensagem)}`;
-          window.open(whatsappURL, '_blank');
-        } else {
-          alert('Erro ao salvar o agendamento. Tente novamente.');
-        }
-      } catch (error) {
-        alert('Erro na conexão. Tente novamente mais tarde.');
-        console.error(error);
+    const select = document.getElementById('hora');
+    select.innerHTML = '<option value="">Selecione o horário</option>';
+    horariosFixos.forEach(h => {
+      if (!horariosOcupados.includes(h)) {
+        const opt = document.createElement('option');
+        opt.value = h;
+        opt.textContent = h;
+        select.appendChild(opt);
       }
     });
-  </script>
+  });
+
+  document.getElementById('form').addEventListener('submit', async function(e) {
+    e.preventDefault();
+    const nome = document.getElementById('nome').value.trim();
+    const data = formatarDataBR(document.getElementById('data').value);
+    const hora = document.getElementById('hora').value;
+
+    if (!nome || !data || !hora) {
+      alert('Preencha todos os campos corretamente.');
+      return;
+    }
+
+    const formData = new URLSearchParams();
+    formData.append("nome", nome);
+    formData.append("data", data);
+    formData.append("hora", hora);
+
+    try {
+      const res = await fetch(scriptURL, {
+        method: "POST",
+        body: formData
+      });
+      const texto = await res.text();
+      if (texto.includes("Sucesso")) {
+        const mensagem = `Olá! Agendei um horário:%0A%0ANome: ${nome}%0AData: ${data}%0AHora: ${hora}`;
+        window.location.href = `https://wa.me/5548988750451?text=${mensagem}`;
+      } else {
+        alert("Esse horário já foi reservado. Escolha outro.");
+      }
+    } catch (err) {
+      alert("Erro ao agendar. Tente novamente.");
+    }
+  });
+</script>
+
 </body>
 </html>
